--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Sample Deployment</title>
   <style>
     body {
-      color: #ffffff;
+      color: #c0c0c0;
       background-color: #007f3f;
       font-family: Arial, sans-serif;
       font-size: 14px;
